# mcp-build

./: .env.production  .gitignore  BRANCH-ISOLATION-PLAN.md  DEPLOYMENT.md  MCP-BUILD.md  Makefile  README.md  REVERSE-PROXY-SETUP.md  TEST_RESULTS.md  deploy-proxy.conf  deploy.conf  mcp-build  mcp-intro  pyproject.toml  requirements.txt  setup.sh  test_http_client.py  test_mcp_http.sh
config/: README.md  repos.json
docker/: Dockerfile  docker-compose.yml
src/: server.py  validators.py
src/helpers/: mcp_client.py
src/mcp_build/helpers/: mcp_client.py
src/mcp_build_environment/: __init__.py  env_info.sh  server.py  validators.py
tests/: README.md  __init__.py  debug_protocol.py  manual_test.py  mcp_client.py  test_integration.py  test_key_file.py  test_mcp_client.py  test_mcp_simple.py  test_read_file.py  test_read_file_http.py  test_read_file_http_rest.py  test_single.py  test_validators.py
